|
Quick Lists
|
|
Bug ID:
|
6824570
|
|
Votes
|
0
|
|
Synopsis
|
ParNew: Fix memory leak introduced in 6819891
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b14),
6u14(b05) (Bug ID:2175490)
, hs15(b05) (Bug ID:2175491)
, 7(b54) (Bug ID:2175668)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
1-Very High
|
|
Related Bugs
|
6819891
|
|
Submit Date
|
31-MAR-2009
|
|
Description
|
The fix for 6819891 inadvertently introduced a memory leak, in
the C-heap, of the order of 2KB*ParallelGCThreads per scavenge.
Over a period of time such a leak can run the JVM out of C-heap
memory and lead to availability issues in the field.
This bug should be fixed in hs14 where it was first introduced.
The bug affects the 64-bit compressed oops jvm using the ParNew
(or CMS) collector.
Posted Date : 2009-03-31 23:41:35.0
|
|
Work Around
|
-XX:-UseParNewGC
or
-XX:-UseCompressedOops
|
|
Evaluation
|
<ouch!>
Posted Date : 2009-03-31 23:43:41.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/becb17ad5e51
Posted Date : 2009-04-03 04:13:25.0
http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/becb17ad5e51
Posted Date : 2009-04-04 03:08:51.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |